--- a/languages/lazaruside.cs.po
+++ b/languages/lazaruside.cs.po
@@ -11801,7 +11801,9 @@ msgid "Toggle View Component Palette"
 msgstr "Přepnout zobrazení palety komponent"
 
 #: lazarusidestrconsts.liskmtoggleviewdebugevents
-msgid "View Debuger Event Log"
+#, fuzzy
+#| msgid "View Debuger Event Log"
+msgid "View Debugger Event Log"
 msgstr "Zobrazit Záznam událostí ladiče"
 
 #: lazarusidestrconsts.liskmtoggleviewdebuggeroutput
@@ -11824,11 +11826,6 @@ msgstr "Přepnout zobrazení Rychlých tlačítek IDE"
 #: lazarusidestrconsts.liskmtoggleviewlocalvariables
 msgid "View Local Variables"
 msgstr "Zobrazit Místní proměnné"
-
-#: lazarusidestrconsts.liskmtoggleviewmemviewer
-msgctxt "lazarusidestrconsts.liskmtoggleviewmemviewer"
-msgid "View Mem viewer"
-msgstr ""
 
 #: lazarusidestrconsts.liskmtoggleviewmessages
 msgid "Toggle view Messages"
@@ -21467,10 +21464,6 @@ msgstr "Předchozí buňka (všechny vybrané / pouze první)"
 msgid "Syntax Check"
 msgstr "Kontrola syntaxe"
 
-#: lazarusidestrconsts.srkmectoggleassembler
-msgid "View assembler"
-msgstr "Zobrazit assembler"
-
 #: lazarusidestrconsts.srkmectogglebreakpoint
 msgid "toggle breakpoint"
 msgstr "prohodit bod přerušení"
@@ -21478,14 +21471,6 @@ msgstr "prohodit bod přerušení"
 #: lazarusidestrconsts.srkmectogglebreakpointenabled
 msgid "enable/disable breakpoint"
 msgstr ""
-
-#: lazarusidestrconsts.srkmectogglebreakpoints
-msgid "View breakpoints"
-msgstr "Zobrazit body zastavení"
-
-#: lazarusidestrconsts.srkmectogglecallstack
-msgid "View call stack"
-msgstr "Zobrazit volací zásobník"
 
 #: lazarusidestrconsts.srkmectogglecodebrowser
 msgid "View code browser"
@@ -21498,10 +21483,6 @@ msgstr "Zobrazit průzkumník kódu"
 #: lazarusidestrconsts.srkmectogglecomppalette
 msgid "View component palette"
 msgstr "Zobrazit sadu komponent"
-
-#: lazarusidestrconsts.srkmectoggledebuggerout
-msgid "View debugger output"
-msgstr "Zobrazit výstup ladícího nástroje"
 
 #: lazarusidestrconsts.srkmectoggleformunit
 msgid "Switch between form and unit"
@@ -21516,10 +21497,6 @@ msgctxt "lazarusidestrconsts.srkmectoggleidespeedbtns"
 msgid "View IDE speed buttons"
 msgstr "Zobrazit rychlá tlačítka IDE"
 
-#: lazarusidestrconsts.srkmectogglelocals
-msgid "View local variables"
-msgstr "Zobrazit místní proměnné"
-
 #: lazarusidestrconsts.srkmectogglemarker
 #, object-pascal-format
 msgid "Toggle bookmark %d"
@@ -21531,7 +21508,7 @@ msgstr "Prohodit zvýraznění aktuálního slova"
 
 #: lazarusidestrconsts.srkmectogglememviewer
 msgctxt "lazarusidestrconsts.srkmectogglememviewer"
-msgid "View Mem viewer"
+msgid "View Memory Viewer"
 msgstr ""
 
 #: lazarusidestrconsts.srkmectogglemessages
@@ -21546,10 +21523,6 @@ msgstr "Přepnout režim"
 msgid "View Object Inspector"
 msgstr "Zobrazit inspektor objektů"
 
-#: lazarusidestrconsts.srkmectoggleregisters
-msgid "View registers"
-msgstr "Zobrazit registry"
-
 #: lazarusidestrconsts.srkmectogglerestrictionbrowser
 msgid "View restriction browser"
 msgstr "Zobrazit prohlížeč omezení"
@@ -21561,10 +21534,6 @@ msgstr "Zobrazit výsledky hledání"
 #: lazarusidestrconsts.srkmectogglesourceeditor
 msgid "View Source Editor"
 msgstr "Zobrazit editor zdrojů"
-
-#: lazarusidestrconsts.srkmectogglewatches
-msgid "View watches"
-msgstr "Zobrazit sledovače"
 
 #: lazarusidestrconsts.srkmecunfoldall
 msgctxt "lazarusidestrconsts.srkmecunfoldall"
@@ -21603,24 +21572,9 @@ msgstr "Zobrazit makra editoru"
 msgid "View forms"
 msgstr "Zobrazit formuláře"
 
-#: lazarusidestrconsts.srkmecviewhistory
-msgctxt "lazarusidestrconsts.srkmecviewhistory"
-msgid "View History"
-msgstr "Ukázat historii"
-
-#: lazarusidestrconsts.srkmecviewpseudoterminal
-msgctxt "lazarusidestrconsts.srkmecviewpseudoterminal"
-msgid "View console in/output"
-msgstr "Zobrazit konzoli vstup/výstup"
-
 #: lazarusidestrconsts.srkmecviewtaborder
 msgid "View Tab Order"
 msgstr "Ukázat pořadí záložek"
-
-#: lazarusidestrconsts.srkmecviewthreads
-msgctxt "lazarusidestrconsts.srkmecviewthreads"
-msgid "View Threads"
-msgstr "Ukázat vlákna"
 
 #: lazarusidestrconsts.srkmecviewunitdependencies
 msgid "View unit dependencies"
