--- a/languages/lazaruside.fi.po
+++ b/languages/lazaruside.fi.po
@@ -11706,7 +11706,9 @@ msgid "Toggle View Component Palette"
 msgstr "Vaihda komponenttipaletti näkymä"
 
 #: lazarusidestrconsts.liskmtoggleviewdebugevents
-msgid "View Debuger Event Log"
+#, fuzzy
+#| msgid "View Debuger Event Log"
+msgid "View Debugger Event Log"
 msgstr "Näytä virheenjäljittimen tapahtumat"
 
 #: lazarusidestrconsts.liskmtoggleviewdebuggeroutput
@@ -11729,11 +11731,6 @@ msgstr "Vaihda IDEn pikavalintojen näkymä"
 #: lazarusidestrconsts.liskmtoggleviewlocalvariables
 msgid "View Local Variables"
 msgstr "Näytä paikalliset muuttujat"
-
-#: lazarusidestrconsts.liskmtoggleviewmemviewer
-msgctxt "lazarusidestrconsts.liskmtoggleviewmemviewer"
-msgid "View Mem viewer"
-msgstr ""
 
 #: lazarusidestrconsts.liskmtoggleviewmessages
 msgid "Toggle view Messages"
@@ -21273,10 +21270,6 @@ msgstr "Edellinen solu (kaikki valitut / vain ensimmäiset)"
 msgid "Syntax Check"
 msgstr "Kieliopin tarkistus"
 
-#: lazarusidestrconsts.srkmectoggleassembler
-msgid "View assembler"
-msgstr "Näytä assembler"
-
 #: lazarusidestrconsts.srkmectogglebreakpoint
 msgid "toggle breakpoint"
 msgstr "Keskeytyskohta päälle/pois"
@@ -21284,14 +21277,6 @@ msgstr "Keskeytyskohta päälle/pois"
 #: lazarusidestrconsts.srkmectogglebreakpointenabled
 msgid "enable/disable breakpoint"
 msgstr ""
-
-#: lazarusidestrconsts.srkmectogglebreakpoints
-msgid "View breakpoints"
-msgstr "Näytä keskeytyskohdat"
-
-#: lazarusidestrconsts.srkmectogglecallstack
-msgid "View call stack"
-msgstr "Näytä kutsupino"
 
 #: lazarusidestrconsts.srkmectogglecodebrowser
 msgid "View code browser"
@@ -21305,10 +21290,6 @@ msgstr "Naytä koodin tutkija"
 msgid "View component palette"
 msgstr "Naytä komponenttipaletti"
 
-#: lazarusidestrconsts.srkmectoggledebuggerout
-msgid "View debugger output"
-msgstr "Naytä virheenjäljittimen tuloste"
-
 #: lazarusidestrconsts.srkmectoggleformunit
 msgid "Switch between form and unit"
 msgstr "Siirry lomakkeen ja käännösyksikön välillä"
@@ -21321,10 +21302,6 @@ msgstr "Naytä dokumentointi-editori"
 msgid "View IDE speed buttons"
 msgstr "Naytä IDEn pikavalinnat"
 
-#: lazarusidestrconsts.srkmectogglelocals
-msgid "View local variables"
-msgstr "Näytä paikalliset muuttujat"
-
 #: lazarusidestrconsts.srkmectogglemarker
 #, object-pascal-format
 msgid "Toggle bookmark %d"
@@ -21336,7 +21313,7 @@ msgstr "Vaihda aktiivisen sanan korostus"
 
 #: lazarusidestrconsts.srkmectogglememviewer
 msgctxt "lazarusidestrconsts.srkmectogglememviewer"
-msgid "View Mem viewer"
+msgid "View Memory Viewer"
 msgstr ""
 
 #: lazarusidestrconsts.srkmectogglemessages
@@ -21351,10 +21328,6 @@ msgstr "Vaihda moodi"
 msgid "View Object Inspector"
 msgstr "Näytä komponenttimuokkain"
 
-#: lazarusidestrconsts.srkmectoggleregisters
-msgid "View registers"
-msgstr "Näytä rekisterit"
-
 #: lazarusidestrconsts.srkmectogglerestrictionbrowser
 msgid "View restriction browser"
 msgstr "Näytä rajoitukset"
@@ -21366,10 +21339,6 @@ msgstr "Näytä etsinnän tulokset"
 #: lazarusidestrconsts.srkmectogglesourceeditor
 msgid "View Source Editor"
 msgstr "Näytä lähdekoodieditori"
-
-#: lazarusidestrconsts.srkmectogglewatches
-msgid "View watches"
-msgstr "Näytä vahdit"
 
 #: lazarusidestrconsts.srkmecunfoldall
 msgctxt "lazarusidestrconsts.srkmecunfoldall"
@@ -21408,24 +21377,9 @@ msgstr "Näytä editorin makrot"
 msgid "View forms"
 msgstr "Näytä lomakkeet"
 
-#: lazarusidestrconsts.srkmecviewhistory
-msgctxt "lazarusidestrconsts.srkmecviewhistory"
-msgid "View History"
-msgstr "Näytä historia"
-
-#: lazarusidestrconsts.srkmecviewpseudoterminal
-msgctxt "lazarusidestrconsts.srkmecviewpseudoterminal"
-msgid "View console in/output"
-msgstr "Näytä komentorivin syöttö/tuloste"
-
 #: lazarusidestrconsts.srkmecviewtaborder
 msgid "View Tab Order"
 msgstr "Näytä tabulointijärjestys"
-
-#: lazarusidestrconsts.srkmecviewthreads
-msgctxt "lazarusidestrconsts.srkmecviewthreads"
-msgid "View Threads"
-msgstr "Näytä Säikeet"
 
 #: lazarusidestrconsts.srkmecviewunitdependencies
 msgid "View unit dependencies"
