--- a/languages/lazaruside.hu.po
+++ b/languages/lazaruside.hu.po
@@ -11769,7 +11769,9 @@ msgid "Toggle View Component Palette"
 msgstr "Komponens paletta megjelenítése"
 
 #: lazarusidestrconsts.liskmtoggleviewdebugevents
-msgid "View Debuger Event Log"
+#, fuzzy
+#| msgid "View Debuger Event Log"
+msgid "View Debugger Event Log"
 msgstr "Hibakereső eseménynapló megjelenítése"
 
 #: lazarusidestrconsts.liskmtoggleviewdebuggeroutput
@@ -11792,11 +11794,6 @@ msgstr "IDE gyorsgombok megjelenítése"
 #: lazarusidestrconsts.liskmtoggleviewlocalvariables
 msgid "View Local Variables"
 msgstr "Helyi változók megjelenítése"
-
-#: lazarusidestrconsts.liskmtoggleviewmemviewer
-msgctxt "lazarusidestrconsts.liskmtoggleviewmemviewer"
-msgid "View Mem viewer"
-msgstr ""
 
 #: lazarusidestrconsts.liskmtoggleviewmessages
 msgid "Toggle view Messages"
@@ -21404,10 +21401,6 @@ msgstr "Előző cella (kijelöléssel / csak elsők)"
 msgid "Syntax Check"
 msgstr "Szintaxis ellenőrzése"
 
-#: lazarusidestrconsts.srkmectoggleassembler
-msgid "View assembler"
-msgstr "Assembler megjelenítése"
-
 #: lazarusidestrconsts.srkmectogglebreakpoint
 msgid "toggle breakpoint"
 msgstr "töréspont ki-/bekapcsolása"
@@ -21415,14 +21408,6 @@ msgstr "töréspont ki-/bekapcsolása"
 #: lazarusidestrconsts.srkmectogglebreakpointenabled
 msgid "enable/disable breakpoint"
 msgstr "Töréspont be- és kikapcsolása"
-
-#: lazarusidestrconsts.srkmectogglebreakpoints
-msgid "View breakpoints"
-msgstr "Töréspontok megjelenítése"
-
-#: lazarusidestrconsts.srkmectogglecallstack
-msgid "View call stack"
-msgstr "Hívási verem megjelenítése"
 
 #: lazarusidestrconsts.srkmectogglecodebrowser
 msgid "View code browser"
@@ -21435,10 +21420,6 @@ msgstr "Kódböngésző megjelenítése"
 #: lazarusidestrconsts.srkmectogglecomppalette
 msgid "View component palette"
 msgstr "Komponens paletta megjelenítése"
-
-#: lazarusidestrconsts.srkmectoggledebuggerout
-msgid "View debugger output"
-msgstr "Hibakereső kimenetének megjelenítése"
 
 #: lazarusidestrconsts.srkmectoggleformunit
 msgid "Switch between form and unit"
@@ -21453,10 +21434,6 @@ msgctxt "lazarusidestrconsts.srkmectoggleidespeedbtns"
 msgid "View IDE speed buttons"
 msgstr "IDE gyorsgombok megjelenítése"
 
-#: lazarusidestrconsts.srkmectogglelocals
-msgid "View local variables"
-msgstr "Helyi változók megjelenítése"
-
 #: lazarusidestrconsts.srkmectogglemarker
 #, object-pascal-format
 msgid "Toggle bookmark %d"
@@ -21468,7 +21445,7 @@ msgstr "Aktuális szó kiemelésének ki-/bekapcsolása"
 
 #: lazarusidestrconsts.srkmectogglememviewer
 msgctxt "lazarusidestrconsts.srkmectogglememviewer"
-msgid "View Mem viewer"
+msgid "View Memory Viewer"
 msgstr ""
 
 #: lazarusidestrconsts.srkmectogglemessages
@@ -21483,10 +21460,6 @@ msgstr "Üzemmód váltása"
 msgid "View Object Inspector"
 msgstr "Objektum-felügyelő megjelenítése"
 
-#: lazarusidestrconsts.srkmectoggleregisters
-msgid "View registers"
-msgstr "Regiszterek megjelenítése"
-
 #: lazarusidestrconsts.srkmectogglerestrictionbrowser
 msgid "View restriction browser"
 msgstr "Korlátozás-böngésző megjelenítése"
@@ -21498,10 +21471,6 @@ msgstr "Keresési eredmények megjelenítése"
 #: lazarusidestrconsts.srkmectogglesourceeditor
 msgid "View Source Editor"
 msgstr "Forráskódszerkesztő megjelenítése"
-
-#: lazarusidestrconsts.srkmectogglewatches
-msgid "View watches"
-msgstr "Figyelők megjelenítése"
 
 #: lazarusidestrconsts.srkmecunfoldall
 msgctxt "lazarusidestrconsts.srkmecunfoldall"
@@ -21540,24 +21509,9 @@ msgstr "Szerkesztő makrók megjelenítése"
 msgid "View forms"
 msgstr "Formok megjelenítése"
 
-#: lazarusidestrconsts.srkmecviewhistory
-msgctxt "lazarusidestrconsts.srkmecviewhistory"
-msgid "View History"
-msgstr "Előzmények megjelenítése"
-
-#: lazarusidestrconsts.srkmecviewpseudoterminal
-msgctxt "lazarusidestrconsts.srkmecviewpseudoterminal"
-msgid "View console in/output"
-msgstr "Konzol be- és kimenetének megjelenítése"
-
 #: lazarusidestrconsts.srkmecviewtaborder
 msgid "View Tab Order"
 msgstr "Tab sorrend megjelenítése"
-
-#: lazarusidestrconsts.srkmecviewthreads
-msgctxt "lazarusidestrconsts.srkmecviewthreads"
-msgid "View Threads"
-msgstr "Szálak megjelenítése"
 
 #: lazarusidestrconsts.srkmecviewunitdependencies
 msgid "View unit dependencies"
