--- a/languages/lazaruside.it.po
+++ b/languages/lazaruside.it.po
@@ -11919,7 +11919,9 @@ msgid "Toggle View Component Palette"
 msgstr "Commuta vista tavolozza dei componenti"
 
 #: lazarusidestrconsts.liskmtoggleviewdebugevents
-msgid "View Debuger Event Log"
+#, fuzzy
+#| msgid "View Debuger Event Log"
+msgid "View Debugger Event Log"
 msgstr "Mosta log eventi del debugger"
 
 #: lazarusidestrconsts.liskmtoggleviewdebuggeroutput
@@ -11942,11 +11944,6 @@ msgstr "Mostra/nascondi speed button dell'IDE"
 #: lazarusidestrconsts.liskmtoggleviewlocalvariables
 msgid "View Local Variables"
 msgstr "Mostra variabili locali"
-
-#: lazarusidestrconsts.liskmtoggleviewmemviewer
-msgctxt "lazarusidestrconsts.liskmtoggleviewmemviewer"
-msgid "View Mem viewer"
-msgstr ""
 
 #: lazarusidestrconsts.liskmtoggleviewmessages
 msgid "Toggle view Messages"
@@ -21652,10 +21649,6 @@ msgstr "Cella precedente (tutte selezionate / solo le prime)"
 msgid "Syntax Check"
 msgstr "Controllo sintassi"
 
-#: lazarusidestrconsts.srkmectoggleassembler
-msgid "View assembler"
-msgstr "Vedi assembler"
-
 #: lazarusidestrconsts.srkmectogglebreakpoint
 msgid "toggle breakpoint"
 msgstr "Inverti breakpoint"
@@ -21663,14 +21656,6 @@ msgstr "Inverti breakpoint"
 #: lazarusidestrconsts.srkmectogglebreakpointenabled
 msgid "enable/disable breakpoint"
 msgstr ""
-
-#: lazarusidestrconsts.srkmectogglebreakpoints
-msgid "View breakpoints"
-msgstr "Mostra i breakpoint"
-
-#: lazarusidestrconsts.srkmectogglecallstack
-msgid "View call stack"
-msgstr "Mostra lo stack chiamate"
 
 #: lazarusidestrconsts.srkmectogglecodebrowser
 msgid "View code browser"
@@ -21683,10 +21668,6 @@ msgstr "Mostra l'esplorer del codice"
 #: lazarusidestrconsts.srkmectogglecomppalette
 msgid "View component palette"
 msgstr "Visualizza la palette dei componenti"
-
-#: lazarusidestrconsts.srkmectoggledebuggerout
-msgid "View debugger output"
-msgstr "Mostra il risultato del debugger"
 
 #: lazarusidestrconsts.srkmectoggleformunit
 msgid "Switch between form and unit"
@@ -21701,10 +21682,6 @@ msgctxt "lazarusidestrconsts.srkmectoggleidespeedbtns"
 msgid "View IDE speed buttons"
 msgstr "Visualizza gli speed buttons dell'IDE"
 
-#: lazarusidestrconsts.srkmectogglelocals
-msgid "View local variables"
-msgstr "Mostra le variabili locali"
-
 #: lazarusidestrconsts.srkmectogglemarker
 #, object-pascal-format, fuzzy
 #| msgid "Toggle Marker %d"
@@ -21717,7 +21694,7 @@ msgstr "Inverti evidenziazione della parola corrente"
 
 #: lazarusidestrconsts.srkmectogglememviewer
 msgctxt "lazarusidestrconsts.srkmectogglememviewer"
-msgid "View Mem viewer"
+msgid "View Memory Viewer"
 msgstr ""
 
 #: lazarusidestrconsts.srkmectogglemessages
@@ -21732,10 +21709,6 @@ msgstr "Cambia modalità"
 msgid "View Object Inspector"
 msgstr "Mostra l'analizzatore oggetti"
 
-#: lazarusidestrconsts.srkmectoggleregisters
-msgid "View registers"
-msgstr "Vedi registri"
-
 #: lazarusidestrconsts.srkmectogglerestrictionbrowser
 msgid "View restriction browser"
 msgstr "Vedi registro delle restrizioni"
@@ -21747,10 +21720,6 @@ msgstr "Mostra risultati della ricerca"
 #: lazarusidestrconsts.srkmectogglesourceeditor
 msgid "View Source Editor"
 msgstr "Mostra l'editor dei sorgenti"
-
-#: lazarusidestrconsts.srkmectogglewatches
-msgid "View watches"
-msgstr "Mostra i watch"
 
 #: lazarusidestrconsts.srkmecunfoldall
 msgctxt "lazarusidestrconsts.srkmecunfoldall"
@@ -21789,26 +21758,9 @@ msgstr "Visualizza l'editor delle macro"
 msgid "View forms"
 msgstr "Mostra le form"
 
-#: lazarusidestrconsts.srkmecviewhistory
-msgctxt "lazarusidestrconsts.srkmecviewhistory"
-msgid "View History"
-msgstr "Mostra lo storico"
-
-#: lazarusidestrconsts.srkmecviewpseudoterminal
-#, fuzzy
-#| msgid "View Terminal Output"
-msgctxt "lazarusidestrconsts.srkmecviewpseudoterminal"
-msgid "View console in/output"
-msgstr "Mostra l'uscita su terminale"
-
 #: lazarusidestrconsts.srkmecviewtaborder
 msgid "View Tab Order"
 msgstr "MOstra l'ordine di tabulazione"
-
-#: lazarusidestrconsts.srkmecviewthreads
-msgctxt "lazarusidestrconsts.srkmecviewthreads"
-msgid "View Threads"
-msgstr "Mostra le thread"
 
 #: lazarusidestrconsts.srkmecviewunitdependencies
 msgid "View unit dependencies"
